--- a/index.html
+++ b/index.html
@@ -94,20 +94,34 @@
 
       <div class="GRID_SECTION_TWO">
         <div class="container_secTwo">
-          <!--SECTION-->
-          <section class="container_secTwo_boxSection">
-            <h2 class="container_secTwo_box_title"> Grow Together </h2>
-            <p class="container_secTwo_box_parrafo">
-              Generate meningful discussions with your audience and build a
-              strong, loyal community. Think of the insighful conversations you 
-              miss out on with a feedback form.
-            </p>
-          </section>
 
-          <!--FIGURA-->
-          <figure class="container_secTwo_boxImage">
-            <img src="./images/illustration-grow-together.svg" alt="togeter" style="width: 100%;height:100%;">
-          </figure>
+          <!--BLOCKE CURVA-->
+          <div class="container_secTwo_blockCurvaTop">
+
+          </div>
+
+          <!--BLOQUE SECCIONES-->
+          <div class="container_secTwo_blockBox">
+             <!--SECTION-->
+            <section class="container_secTwo_blockBox_section">
+              <h2 class="container_secTwo_blockBox_section_title"> Grow Together </h2>
+              <p class="container_secTwo_blockBox_section_parrafo">
+                Generate meningful discussions with your audience and build a
+                strong, loyal community. Think of the insighful conversations you 
+                miss out on with a feedback form.
+              </p>
+            </section>
+
+            <!--FIGURA-->
+            <figure class="container_secTwo_blockBox_image">
+              <img src="./images/illustration-grow-together.svg" alt="togeter" style="width: 100%;height:100%;">
+            </figure>
+          </div>
+
+          <!--BLOCKE CURVA-->
+          <div class="container_secTwo_blockCurvaBottom">
+            
+          </div>
           
         </div>
       </div>
