--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <!--BLOCKE CURVA-->
           <div class="container_secTwo_blockCurvaBottom">
-            
+
           </div>
           
         </div>
@@ -130,13 +130,13 @@
         <div class="container_secThree">
           <!--FIGURA-->
           <figure class="container_secThree_boxImage">
-            <img src="./images/illustration-grow-together.svg" alt="togeter" style="width: 100%;height:100%;">
+            <img src="./images/illustration-flowing-conversation.svg" alt="togeter" style="width: 100%;height:100%;">
           </figure>
 
            <!--SECTION-->
            <section class="container_secThree_boxSection">
-            <h2 class="container_secThree_box_title"> Grow Together </h2>
-            <p class="container_secThree_box_parrafo">
+            <h2 class="container_secThree_boxSection_title"> Flowing Conversations </h2>
+            <p class="container_secThree_boxSection_parrafo">
               Generate meningful discussions with your audience and build a
               strong, loyal community. Think of the insighful conversations you 
               miss out on with a feedback form.
