--- a/index.html
+++ b/index.html
@@ -148,24 +148,33 @@
 
       <div class="GRID_SECTION_FOUR">
         <div class="container_secFour">
-          <!--SECTION-->
-          <section class="container_secFour_boxSection">
-            <h2 class="container_secFour_box_title"> Grow Together </h2>
-            <p class="container_secFour_box_parrafo">
-              Generate meningful discussions with your audience and build a
-              strong, loyal community. Think of the insighful conversations you 
-              miss out on with a feedback form.
-            </p>
-          </section>
 
-          <!--FIGURA-->
-          <figure class="container_secFour_boxImage">
-            <img src="./images/illustration-grow-together.svg" alt="togeter" style="width: 100%;height:100%;">
-          </figure>
+          <!--BLOCKE CURVA-->
+          <div class="container_secFour_blockCurvaTop">
 
-          <!--FIGURA CIRCULAR-->
-          <div class="container_secFour_boxCircule">
-            <img src="./images/bg-footer-top-desktop.svg" alt="bg-footer" style="width: 100%;height: 100%;">
+          </div>
+
+          <!--BLOQUE SECCIONES-->
+          <div class="container_secFour_blockBox">
+             <!--SECTION-->
+            <section class="container_secFour_blockBox_section">
+              <h2 class="container_secFour_blockBox_section_title"> Your Users </h2>
+              <p class="container_secFour_blockBox_section_parrafo">
+                Generate meningful discussions with your audience and build a
+                strong, loyal community. Think of the insighful conversations you 
+                miss out on with a feedback form.
+              </p>
+            </section>
+
+            <!--FIGURA-->
+            <figure class="container_secFour_blockBox_image">
+              <img src="./images/illustration-your-users.svg" alt="togeter" style="width: 100%;height:100%;">
+            </figure>
+          </div>
+
+          <!--BLOCKE CURVA-->
+          <div class="container_secFour_blockCurvaBottom">
+
           </div>
           
         </div>
