--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
   <!--FONT AWESOME-->
   <script src="https://kit.fontawesome.com/b7fb745aab.js" crossorigin="anonymous"></script>
+
+  <!--ANIMATE-->
+  <link rel="stylesheet" href="./css/animate.min.css">
+
   
   
   <title>Página de inicio con secciones curvas</title>
@@ -30,7 +34,7 @@
       <div class="GRID_HEADER">
         <div class="container_header">
           <!--LOGO-->
-          <div class="container_header_logo">
+          <div class="container_header_logo" >
             <img src="./images/logo.svg" alt="logo" style="width: 100%; height:100%;">
           </div>
           <!--BOTON TRI IT FREE-->
@@ -283,5 +287,12 @@
 
 
   <script src="./js/main.js"></script>
+
+  <!--INICIALIZAR WOW-->
+  <script src="./js/wow.min.js"></script>
+
+  <script>
+    new WOW().init();
+  </script>
 </body>
 </html>
