--- a/index.html
+++ b/index.html
@@ -45,22 +45,27 @@
       <div class="GRID_SECTION_ONE">
         <div class="container_sectOne">
           <section class="container_sectOne_boxTop">
-            <h2 class="container_sectOne_boxTop_title">Build The Community Your Fans Will Love</h2>
+            <h2 class="container_sectOne_boxTop_title
+            wow animate__animated animate__fadeInUp">Build The Community Your Fans Will Love</h2>
 
-            <p class="container_sectOne_boxTop_parrafo">
+            <p class="container_sectOne_boxTop_parrafo
+            wow animate__animated animate__fadeInUp">
               Huddle re-imagines the way we build communities. You have a
               voice, but so does audience. Create conections with your 
               users as you engage in genuine discussion. 
-            </p>
+            </p>  
 
-            <button class="container_sectOne_boxTop_button"> Get Started For Free </button>
+            <button class="container_sectOne_boxTop_button
+            wow animate__animated animate__fadeInUp"> Get Started For Free </button>
           </section>
 
-          <figure class="container_sectOne_boxImage">
+          <figure class="container_sectOne_boxImage
+          wow animate__animated animate__fadeInUp">
             <img src="./images/screen-mockups.svg" alt="screen" style="width:100%; height:100%;">
           </figure>
 
-          <div class="container_sectOne_boxMarker">
+          <div class="container_sectOne_boxMarker
+          wow animate__animated animate__fadeInUp">
             <!--BOX-->
             <div class="container_sectOne_boxMarker_box">
               <!--ICON-->
@@ -107,7 +112,8 @@
           <!--BLOQUE SECCIONES-->
           <div class="container_secTwo_blockBox">
              <!--SECTION-->
-            <section class="container_secTwo_blockBox_section">
+            <section class="container_secTwo_blockBox_section
+            wow animate__animated animate__fadeInUp">
               <h2 class="container_secTwo_blockBox_section_title"> Grow Together </h2>
               <p class="container_secTwo_blockBox_section_parrafo">
                 Generate meningful discussions with your audience and build a
@@ -138,7 +144,8 @@
           </figure>
 
            <!--SECTION-->
-           <section class="container_secThree_boxSection">
+           <section class="container_secThree_boxSection
+           wow animate__animated animate__fadeInUp">
             <h2 class="container_secThree_boxSection_title"> Flowing Conversations </h2>
             <p class="container_secThree_boxSection_parrafo">
               You wouldn t paginate a conversation in real, so why do it online?
@@ -160,7 +167,8 @@
           <!--BLOQUE SECCIONES-->
           <div class="container_secFour_blockBox">
              <!--SECTION-->
-            <section class="container_secFour_blockBox_section">
+            <section class="container_secFour_blockBox_section
+            wow animate__animated animate__fadeInUp">
               <h2 class="container_secFour_blockBox_section_title"> Your Users </h2>
               <p class="container_secFour_blockBox_section_parrafo">
                 It takes no time al all integrate Huddle with your app
@@ -186,8 +194,10 @@
 
       <div class="GRID_SECTION_FIVE">
         <div class="container_secFive">
-          <h2 class="container_secFive_title"> Ready To Build Your Community? </h2>
-          <button class="container_secFive_button"> Get Started For Free </button>
+          <h2 class="container_secFive_title
+          wow animate__animated animate__fadeInUp"> Ready To Build Your Community? </h2>
+          <button class="container_secFive_button
+          wow animate__animated animate__fadeInUp"> Get Started For Free </button>
         </div>
       </div>
 
